# anode

./: .clinerules  README.md  base.py  commands.py  controller.py  core.py  demo.py  environment.yml  ffi_base.py  main.py  main_gui.py  nodes.py  plugin_system.py  pyproject.toml  test_del_crash2.py  theme.py  ui_framework.py  ui_icons.py  ui_system.py
cpp/: CMakeLists.txt  compressor.cpp  delay.cpp  gain.cpp  neural_amp.cpp
plugins/: audio_devices.py  audio_output.py  basic_nodes.py  convolution_reverb.py  delay.py  dynamics.py  extended_nodes.py  fast_nodes.py  media_player.py  neural_amp.py  scripting.py  visualization.py
tests/: test_core.py  test_file_renderer.py  test_nodes.py  test_save_load.py  test_scripting.py  test_system_integrity.py
